--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "page-flip",
-  "version": "2.0.7",
+  "version": "1.0.0",
   "main": "dist/js/page-flip.browser.js",
   "browser": "dist/js/page-flip.browser.js",
   "author": "oleg.litovski9@gmail.com",
@@ -12,13 +12,18 @@
   },
   "publishConfig": {},
   "homepage": "https://nodlik.github.io/StPageFlip/",
-  "dependencies": {},
+  "dependencies": {
+    "pdfjs-dist": "^2.10.377"
+  },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^2.33.0",
     "@typescript-eslint/parser": "^2.33.0",
+    "@webpack-cli/serve": "^1.4.0",
+    "copy-webpack-plugin": "^10.0.0",
     "css-loader": "^3.5.3",
     "eslint": "^7.0.0",
     "eslint-plugin-typescript": "^0.14.0",
+    "html-webpack-plugin": "^5.3.1",
     "prettier": "^2.0.5",
     "rollup-plugin-postcss": "^3.1.1",
     "rollup-plugin-terser": "^6.1.0",
@@ -27,13 +32,16 @@
     "ts-loader": "^7.0.4",
     "typedoc": "^0.17.8",
     "typescript": "latest",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11"
+    "webpack": "^5.37.0",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.2"
   },
   "scripts": {
     "eslint": "eslint . --ext .ts",
     "build-global": "npx webpack",
-    "build": "rollup -c"
+    "build": "rollup -c",
+    "start:dev": "webpack-dev-server",
+    "watch": "webpack --watch"
   },
   "keywords": [
     "typescript",
