--- a/package.json
+++ b/package.json
@@ -25,11 +25,12 @@
     "eslint-plugin-typescript": "^0.14.0",
     "html-webpack-plugin": "^5.3.1",
     "prettier": "^2.0.5",
+    "rollup": "^2.75.7",
     "rollup-plugin-postcss": "^3.1.1",
     "rollup-plugin-terser": "^6.1.0",
     "rollup-plugin-typescript2": "^0.27.1",
     "style-loader": "^1.2.1",
-    "ts-loader": "^7.0.4",
+    "ts-loader": "^9.3.1",
     "typedoc": "^0.17.8",
     "typescript": "latest",
     "webpack": "^5.37.0",
