--- a/package.json
+++ b/package.json
@@ -12,30 +12,30 @@
   },
   "publishConfig": {},
   "homepage": "https://nodlik.github.io/StPageFlip/",
+  "type": "module",
   "dependencies": {
     "pdfjs-dist": "^2.10.377"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^2.33.0",
-    "@typescript-eslint/parser": "^2.33.0",
-    "@webpack-cli/serve": "^1.4.0",
-    "copy-webpack-plugin": "^10.0.0",
-    "css-loader": "^3.5.3",
-    "eslint": "^7.0.0",
-    "eslint-plugin-typescript": "^0.14.0",
-    "html-webpack-plugin": "^5.3.1",
-    "prettier": "^2.0.5",
-    "rollup": "^2.75.7",
-    "rollup-plugin-postcss": "^3.1.1",
-    "rollup-plugin-terser": "^6.1.0",
-    "rollup-plugin-typescript2": "^0.27.1",
+    "@rollup/plugin-terser": "^0.4.3",
+    "@typescript-eslint/eslint-plugin": "^5.61.0",
+    "@typescript-eslint/parser": "^5.61.0",
+    "@webpack-cli/serve": "^2.0.5",
+    "copy-webpack-plugin": "^11.0.0",
+    "css-loader": "^6.8.1",
+    "eslint": "^8.44.0",
+    "html-webpack-plugin": "^5.5.3",
+    "prettier": "^3.0.0",
+    "rollup": "^3.26.1",
+    "rollup-plugin-postcss": "^4.0.2",
+    "rollup-plugin-typescript2": "^0.35.0",
     "style-loader": "^1.2.1",
-    "ts-loader": "^9.3.1",
-    "typedoc": "^0.17.8",
+    "ts-loader": "^9.4.4",
+    "typedoc": "^0.24.8",
     "typescript": "latest",
-    "webpack": "^5.37.0",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.2"
+    "webpack": "^5.88.1",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1"
   },
   "scripts": {
     "eslint": "eslint . --ext .ts",
